--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,9 +3,10 @@ name: Test deploy
 concurrency: production
 
 on:
-  branches:
-    - main
-    - master
+  push:
+    branches:
+      - main
+      - master
     
 jobs:
   deployment:
