--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,6 +1,8 @@
-name: Test deploy
+name: production deployment
 
-concurrency: production
+concurrency: 
+  group: production
+  cancel-in-progress: true
 
 on:
   push:
@@ -14,5 +16,5 @@ jobs:
     environment: production
     runs-on: ubuntu-latest
     steps:
-      - name: Deploying on dev
+      - name: Deploying on production
         run: echo "Deploying..."
